# QuickPaste-Manager

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
doc/: 01. quickpaste_manager_기획서.docx  03. quickpaste_manager_cursor_kickoff.md  04. quickpaste_manager_cursor_kickoff_v3.md  05. quickpaste_manager_cursor_kickoff_v4.md  README.md  기획서_v3.md  기획서_v4.md
docs/: INDEX.md  QuickPaste_Manager_발표용_10장.pptx  QuickPaste_Manager_소개.pptx  architecture.md  compatibility-test-plan.md  cursor_kickoff_v3.md  cursor_kickoff_v4.md  deploy.md  prd_v2.md  prd_v3.md  prd_v4.md  quickpaste-manager-prd.md  release-checklist.md  기능명세서_v2.md  기능명세서_v3.md  기능명세서_v4.md  기획서_v2.md  기획서_v3.md  기획서_v4.md  사용자ui설계.xlsx
installer/: build_installer.ps1  quickpaste.iss  quickpaste.spec
samples/: README.md
scripts/: bootstrap.ps1  build_release.ps1  dev_run.ps1  generate_intro_ppt.py  generate_sample_import_zip.py  sign_release.ps1
src/: main.py  version.py
tests/: test_backup_service.py  test_category_repository.py  test_clickable_image_label.py  test_clipboard_history_exclude.py  test_config.py  test_db.py  test_draggable_title_bar.py  test_focus_restore.py  test_help.py  test_hotkey_parser.py  test_hotkey_service_probe.py  test_hover_zone.py  test_icons.py  test_image_open.py  test_image_snippet.py  test_import_export.py  test_input_injection.py  test_mouse_trigger_service.py  test_paste_image_blocked.py  test_paste_service.py  test_paste_target.py  test_paths.py  test_popup_category_top5.py  test_popup_close_after_paste.py  test_popup_focus_persist.py  (+7 more)
(+54 files in other folders)
